Update gradle-wrapper to v7.6.1, com.diffplug.spotless to 6.13.0